# serializer version: 1
# name: TestCreate.test_ok[index]
  dict({
    '_id': 'bf1b993c',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'has_files': True,
    'has_json': False,
    'job': dict({
      'id': 1,
    }),
    'manifest': dict({
      'bar': 2,
      'foo': 1,
    }),
    'ready': False,
    'reference': dict({
      'id': 1,
    }),
    'task': None,
    'user': dict({
      'id': 1,
    }),
    'version': 0,
  })
# ---
# name: TestCreate.test_ok[json]
  dict({
    'change_count': 1,
    'contributors': list([
      dict({
        'count': 1,
        'handle': 'leeashley',
        'id': 1,
      }),
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
    ]),
    'has_files': True,
    'id': 'bf1b993c',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 1,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'build_index',
    }),
    'manifest': dict({
      'bar': 2,
      'foo': 1,
    }),
    'modified_otu_count': 1,
    'otus': list([
      dict({
        'change_count': 1,
        'id': 'otu_1',
        'name': 'Tobacco mosaic virus',
      }),
    ]),
    'ready': False,
    'reference': dict({
      'data_type': 'genome',
      'id': 1,
      'name': 'Foo',
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'version': 0,
  })
# ---
# name: TestCreate.test_ok[location]
  'https://virtool.example.com/indexes/bf1b993c'
# ---
# name: TestFind.test_find[active]
  dict({
    'change_count': 12,
    'documents': list([
      dict({
        'change_count': 4,
        'created_at': '2015-10-06T20:00:00Z',
        'has_files': True,
        'id': 'idx_active_a',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 1,
          'progress': 100,
          'state': 'cancelled',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'build_index',
        }),
        'modified_otu_count': 3,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 1,
      }),
      dict({
        'change_count': 2,
        'created_at': '2015-10-06T20:00:00Z',
        'has_files': True,
        'id': 'idx_active_b',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 2,
          'progress': 0,
          'state': 'running',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'build_index',
        }),
        'modified_otu_count': 2,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 2,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 0,
      }),
    ]),
    'found_count': 2,
    'modified_otu_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
    'total_otu_count': 123,
  })
# ---
# name: TestFind.test_find[archived]
  dict({
    'change_count': 12,
    'documents': list([
      dict({
        'change_count': 0,
        'created_at': '2015-10-06T20:00:00Z',
        'has_files': True,
        'id': 'idx_archived',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 3,
          'progress': 0,
          'state': 'running',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'build_index',
        }),
        'modified_otu_count': 0,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 3,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 0,
      }),
    ]),
    'found_count': 1,
    'modified_otu_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
    'total_otu_count': 123,
  })
# ---
# name: TestFind.test_find[default]
  dict({
    'change_count': 12,
    'documents': list([
      dict({
        'change_count': 4,
        'created_at': '2015-10-06T20:00:00Z',
        'has_files': True,
        'id': 'idx_active_a',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 1,
          'progress': 100,
          'state': 'cancelled',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'build_index',
        }),
        'modified_otu_count': 3,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 1,
      }),
      dict({
        'change_count': 2,
        'created_at': '2015-10-06T20:00:00Z',
        'has_files': True,
        'id': 'idx_active_b',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 2,
          'progress': 0,
          'state': 'running',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'build_index',
        }),
        'modified_otu_count': 2,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 2,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 0,
      }),
      dict({
        'change_count': 0,
        'created_at': '2015-10-06T20:00:00Z',
        'has_files': True,
        'id': 'idx_archived',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 3,
          'progress': 0,
          'state': 'running',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'build_index',
        }),
        'modified_otu_count': 0,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 3,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 0,
      }),
    ]),
    'found_count': 3,
    'modified_otu_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
    'total_otu_count': 123,
  })
# ---
# name: TestFind.test_ready[active]
  list([
    dict({
      'change_count': 0,
      'created_at': '2015-10-06T20:00:00Z',
      'has_files': True,
      'id': 'idx_active_b',
      'job': dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'progress': 100,
        'state': 'failed',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'pathoscope',
      }),
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 2,
        'name': 'Reference',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 0,
    }),
    dict({
      'change_count': 0,
      'created_at': '2015-10-06T22:00:00Z',
      'has_files': True,
      'id': 'idx_active_a',
      'job': dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'progress': 100,
        'state': 'failed',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'pathoscope',
      }),
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 1,
        'name': 'Reference',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 1,
    }),
  ])
# ---
# name: TestFind.test_ready[archived]
  list([
    dict({
      'change_count': 0,
      'created_at': '2015-10-07T00:00:00Z',
      'has_files': True,
      'id': 'idx_archived',
      'job': dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'progress': 100,
        'state': 'failed',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'pathoscope',
      }),
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 3,
        'name': 'Reference',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 0,
    }),
  ])
# ---
# name: TestFind.test_ready[default]
  list([
    dict({
      'change_count': 0,
      'created_at': '2015-10-06T20:00:00Z',
      'has_files': True,
      'id': 'idx_active_b',
      'job': dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'progress': 100,
        'state': 'failed',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'pathoscope',
      }),
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 2,
        'name': 'Reference',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 0,
    }),
    dict({
      'change_count': 0,
      'created_at': '2015-10-06T22:00:00Z',
      'has_files': True,
      'id': 'idx_active_a',
      'job': dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'progress': 100,
        'state': 'failed',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'pathoscope',
      }),
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 1,
        'name': 'Reference',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 1,
    }),
    dict({
      'change_count': 0,
      'created_at': '2015-10-07T00:00:00Z',
      'has_files': True,
      'id': 'idx_archived',
      'job': dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'progress': 100,
        'state': 'failed',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'pathoscope',
      }),
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 3,
        'name': 'Reference',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 0,
    }),
  ])
# ---
# name: test_finalize[409_fasta]
  dict({
    'id': 'conflict',
    'message': 'A FASTA file must be uploaded in order to finalize index',
  })
# ---
# name: test_finalize[409_genome]
  dict({
    'id': 'conflict',
    'message': 'Reference requires that all Bowtie2 index files have been uploaded. Missing files: reference.1.bt2, reference.2.bt2, reference.3.bt2, reference.4.bt2, reference.rev.1.bt2, reference.rev.2.bt2',
  })
# ---
# name: test_finalize[None]
  dict({
    'change_count': 0,
    'contributors': list([
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
      dict({
        'download_url': '/indexes/test_index/files/reference.fa.gz',
        'id': 1,
        'index': 'test_index',
        'name': 'reference.fa.gz',
        'size': 9000,
        'type': 'fasta',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.json.gz',
        'id': 2,
        'index': 'test_index',
        'name': 'reference.json.gz',
        'size': 9000,
        'type': 'json',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.1.bt2',
        'id': 3,
        'index': 'test_index',
        'name': 'reference.1.bt2',
        'size': 9000,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.2.bt2',
        'id': 4,
        'index': 'test_index',
        'name': 'reference.2.bt2',
        'size': 9000,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.3.bt2',
        'id': 5,
        'index': 'test_index',
        'name': 'reference.3.bt2',
        'size': 9000,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.4.bt2',
        'id': 6,
        'index': 'test_index',
        'name': 'reference.4.bt2',
        'size': 9000,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.rev.1.bt2',
        'id': 7,
        'index': 'test_index',
        'name': 'reference.rev.1.bt2',
        'size': 9000,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.rev.2.bt2',
        'id': 8,
        'index': 'test_index',
        'name': 'reference.rev.2.bt2',
        'size': 9000,
        'type': 'bowtie2',
      }),
    ]),
    'has_files': True,
    'id': 'test_index',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 2,
      'progress': 100,
      'state': 'failed',
      'user': dict({
        'handle': 'leeashley',
        'id': 2,
      }),
      'workflow': 'build_index',
    }),
    'manifest': dict({
      'foo': 4,
    }),
    'modified_otu_count': 0,
    'otus': list([
    ]),
    'ready': True,
    'reference': dict({
      'data_type': 'genome',
      'id': 1,
      'name': 'Reference',
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 2,
    }),
    'version': 2,
  })
# ---
# name: test_finalize[None].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 1,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 1,
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_find_history[None]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Edited sequence wrta20tr in Islolate chilli-CR',
        'id': 'kjs8sa99.3',
        'index': dict({
          'id': 'foobar',
          'version': 0,
        }),
        'method_name': 'edit_sequence',
        'otu': dict({
          'id': 'kjs8sa99',
          'name': 'Foo',
          'version': 3,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Added Unnamed Isolate as default',
        'id': 'zxbbvngc.2',
        'index': dict({
          'id': 'foobar',
          'version': 0,
        }),
        'method_name': 'add_isolate',
        'otu': dict({
          'id': 'zxbbvngc',
          'name': 'Test',
          'version': 2,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Added Unnamed Isolate as default',
        'id': 'zxbbvngc.1',
        'index': dict({
          'id': 'foobar',
          'version': 0,
        }),
        'method_name': 'add_isolate',
        'otu': dict({
          'id': 'zxbbvngc',
          'name': 'Test',
          'version': 1,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Added Unnamed Isolate as default',
        'id': 'zxbbvngc.0',
        'index': dict({
          'id': 'foobar',
          'version': 0,
        }),
        'method_name': 'add_isolate',
        'otu': dict({
          'id': 'zxbbvngc',
          'name': 'Test',
          'version': 0,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
    ]),
    'found_count': 4,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 4,
  })
# ---
# name: test_get[None]
  dict({
    'change_count': 3,
    'contributors': list([
      dict({
        'count': 2,
        'handle': 'myersmitchell',
        'id': 2,
      }),
      dict({
        'count': 1,
        'handle': 'modonnell',
        'id': 3,
      }),
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
    ]),
    'has_files': True,
    'id': 'foobar',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 1,
      'progress': 0,
      'state': 'running',
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'workflow': 'build_index',
    }),
    'manifest': dict({
      'foo': 2,
    }),
    'modified_otu_count': 2,
    'otus': list([
      dict({
        'change_count': 1,
        'id': 'pvx',
        'name': 'Potato virus X',
      }),
      dict({
        'change_count': 2,
        'id': 'tmv',
        'name': 'Tobacco mosaic virus',
      }),
    ]),
    'ready': False,
    'reference': dict({
      'data_type': 'genome',
      'id': 1,
      'name': 'Reference',
    }),
    'user': dict({
      'handle': 'myersmitchell',
      'id': 2,
    }),
    'version': 0,
  })
# ---
# name: test_upload[None]
  dict({
    'download_url': '/indexes/foo/files/reference.1.bt2',
    'id': 1,
    'index': 'foo',
    'name': 'reference.1.bt2',
    'size': 4200473,
    'type': 'bowtie2',
  })
# ---
# name: test_upload[None].1
  dict({
    '_id': 'foo',
    'job': dict({
      'id': 2,
    }),
    'reference': dict({
      'id': 'bar',
    }),
    'task': None,
    'user': dict({
      'id': 2,
    }),
  })
# ---
# name: test_upload[None].2
  <SQLIndexFile(id=1, name=reference.1.bt2, index=foo, type=bowtie2, size=4200473)>
# ---
